--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class='scroll-container' >
           <img src="./images/forest.png"/>
             <div class='section text' id="text">
-              An ode to the forest.
+              the forest.
             </div>
         </div>
 
