--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <div class='container'>
 
         <div class='scroll-container' >
-          <img src="./images/forest.png"/>
+            <!-- <img src="./images/forest.png"/> -->
+            <div class='title-screen'>
+              the forest
+            </div>
             <div class='section text' id="text">
               the forest.
             </div>
